-
Type:
Bug
-
Resolution: Fixed
-
Priority:
Major - P3
-
Affects Version/s: None
-
Component/s: None
-
None
-
DB Integration & Observability
-
Fully Compatible
-
ALL
-
None
-
None
-
None
-
None
-
None
-
None
-
None
This is yet another one in the series of re-parsing failures. This one came up on the query patch for both all feature flags and classic engine all feature flags when testing SERVER-75596. This happened only on the query_stats_mongos_aggregation_passthrough suite in this evergreen patch.
Was not able to re-parse queryStats key when reading queryStats.Status NamespaceNotFound: database merge_to_referenced_coll not found Hash: 10246678213668657820 Query Shape: { cmdNs: { db: \"merge_to_referenced_coll\", coll: \"test\" }, command: \"aggregate\", pipeline: [ { $facet: { y: [ { $lookup: { from: \"TARGET\", as: \"y\", let: {}, pipeline: [] } } ] } }, { $merge: { into: { db: \"merge_to_referenced_coll\", coll: \"TARGET\" }, on: \"_id\", whenMatched: \"merge\", whenNotMatched: \"insert\" } } ] }
This is the assertion that's failing.
- is depended on by
-
SERVER-85096 TRACKING: M3 Correctness Tickets
-
- Closed
-
- is related to
-
SERVER-75596 Stress $queryStats read path for aggregation
-
- Closed
-