SERVER-83912 Skip facet validation requiring catalog when parsing for query stats

GitOrigin-RevId: a4a2450ea411d177b038fd68255052fc655fc79e